bingd 0.2.4
===========

* Implements S4 Annotated GWAS class
* pull.features() is deprecated


bingd 0.2.3.2
=============

* Export as.GWAS()
* Fix bug in z-score calculations

bingd 0.2.3.1
=============

* Bump version number

bingd 0.2.3
==========

* Major improvements to documentation
* Deprecated import.gwas()
* Implements S4 FeatureList class
* GWAS objects now require genome build information

bingd 0.2.2
===========

* Implements S4 GWAS class
* Updated methods to work with new class
* Adds tests for:
    - creating GWAS objects
    - adding annotations
    - calculating enrichment

bingd 0.2.1
===========

* Feature search

  * Local features independent of AnnotationHub can now be searched for using
    `local.features()`
  * Searching AnnotationHub is now done using `hub.features()`, to be consistent
    with `local.features()` and `hub.metadata()` is deprecated

* Uncached AnnotationHub features can be downloaded using cache.features()

bingd 0.2
=========

* Feature search

  * Searching is now decoupled from annotating and calculating enrichment
	* Searching for AnnotationHub features can now be
	  conducted without an internet connection by setting
	  `online = FALSE`
	* `get.metadata()` is now `hub.metadata()`
	* `feature.search()` is now `hub.search()`
  * returns a FeatureList object

* `annotate.gwas()` now requires a FeatureList object and no longer requires
   an internet connection  
* `calc.enrichment()` can be performed with an annotated GWAS object OR
   with an unannotated GWAS object + a FeatureList object

* `features()` is now `pull.features()`, an S4 function

* ADDED unit tests