@@ -3,6 +3,7 @@ bingd 0.2.4
 
 * Implements S4 Annotated GWAS class
 * pull.features() is deprecated
+* Added pvalue() and marker() accessors for GWAS objects
 
 
 bingd 0.2.3.2
